# agentz

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  DEVLOG.md  README.md  instructions.md  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 16ac1682d5e1_fix_max_iterations_column_type.py  512684a5d3c1_create_memories_table.py  a50b1298c1b6_enhance_task_model_with_metrics.py  create_agents_and_tasks_tables.py  d4867f3a4c35_create_agents_and_tasks_tables.py
backend/app/: database.py  dependencies.py  main.py  tasks.py
backend/app/agents/: __init__.py
backend/app/api/: __init__.py  agents.py  crews.py  tasks.py  websocket.py  workflows.py
backend/app/core/: base.py  celery_app.py  config.py  database.py  errors.py  logging.py  websocket.py
backend/app/models/: agent.py  base.py  memory.py  task.py  workflow.py
backend/app/routers/: __init__.py  agent_memory.py  agents.py  analytics.py  auth.py  health.py  memory.py  tasks.py  tools.py
backend/app/schemas/: __init__.py  agent.py  base.py  crew.py  retry.py  task.py  tool.py  workflow.py
backend/app/services/: __init__.py  agent.py  agent_memory.py  auth.py  (+14 more)
backend/docs/: API.md  DEVELOPMENT.md  TROUBLESHOOTING.md
backend/scripts/: backup_db.py  backup_local.py  init_db.py  run_load_tests.sh  run_tests.sh
backend/tests/: conftest.py  models.py  test_config.py  test_task_flow.py
(+50 files in other folders)
